Added a few files and re-designed the whole application. I changed background colors, designed some custom buttons, and changed verbiage.
Colors may not be reflected properly in Android studios, test on a device or in the simulator the check background colors.

Need to add logic for the drinks consumed counter.

Almost ready for deployment.

--- a/BuzzTrack/app/src/main/res/values/strings.xml
+++ b/BuzzTrack/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">BuzzTrack</string>
+    <string name="changehint1"><i>40.0</i></string>
+    <string name="changehint2"><i>1.5</i></string>
+    <string name="changehint3"><i>Whiskey</i></string>
+    <string name="settingshint1"><i>70.0</i></string>
+    <string name="settingshint2"><i>160.0</i></string>
 </resources>
